# leonidas-agents

./: .env.backend.example  .env.mcp.example  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py  cli.py
backend/ai_ibridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  checkpointer.py  contracts.py  mcp_client.py  middleware.py  registry.py  registry_markdown.py  state.py
backend/app/api/: __init__.py  deps.py  main.py  routes.py  workflows.py
backend/app/cache/: __init__.py  cache_keys.py  redis_cache.py
backend/app/evaluation/: __init__.py  benchmarks.py  metrics.py
backend/app/gateway/: __init__.py  hub.py  protocol.py  ws_routes.py
backend/app/graph/: base_graph.py  conditions.py  interrupts.py  (+1 more)
backend/tests/: test_intent_planner.py  test_markdown_chain_graph.py  test_markdown_registry.py  test_mcp.py  test_mcp_guarded.py  test_state.py
docs/: 01-phase-0-design-contract.md  02-architecture-overview.md  03-state-and-graph.md  04-mcp-server-and-client.md  05-agents-and-skills-registry.md  06-phased-roadmap.md  07-docker-and-local-dev.md  08-registry-guide.md  09-workflow-chaining.md  10-planner-design.md  11-a2a-design.md  EXTENDING_MAS.md  HOW-TO-ADD-AGENTS.md  README.md  add-agent.md  quickstart-10-min.md  thesis-evaluation.md
mcp_server/: contracts.py  main.py  registry.yaml
mcp_server/tools/: __init__.py  gmaps_places.py  heygen_video_agent.py  redis_cache.py  supabase_query.py  web_search.py
supabase/sql/: 001_workflow_tables.sql  002_workflow_runs_user_id.sql
(+63 files in other folders)
