[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ibridge"
version = "0.1.0"
description = "AI I-Bridge — multi-agent LangGraph + MCP (Phase 0 scaffold)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.1.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "redis[hiredis]>=5.0",
    "supabase>=2.0",
    "python-dotenv>=1.0",
]
checkpoint-postgres = [
    "langgraph-checkpoint-postgres>=3.0",
]
mcp = [
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend", "."]
asyncio_mode = "strict"
markers = [
  "asyncio: mark a test as asyncio-based"
]